# Math_of_Computer_Graphics

./: LICENSE  README.md
Project/: JS.js  camera.js  cube.js  index.html  line.js  main.js  matrix.js  orb.js  plane.js  quaternion.js  section.js  vectors.js  writing.js
Zad6Cpp/: CMakeLists.txt  main.cpp
Zad6Cpp/lib/: Camera.h  Cube.h  Line.h  Matrix3x3.h  Matrix4x4.h  Plane.h  Quaternion.h  Section.h  Vector.h
Zad6Cpp/src/: Camera.cpp  Cube.cpp  Line.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Plane.cpp  Quaternion.cpp  Section.cpp  Vector.cpp
zad6/: camera.js  cube.js  index.html  line.js  main.js  orb.js  package.json  plane.js  quaternion.js  section.js  style.css  vectors.js  writing.js
